--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,16 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-sm fixed-top justify-content-end">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#section1">Section 1</a>
+      <a class="nav-link" href="#home">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#section2">Section 2</a>
+      <a class="nav-link" href="#explore">Explore</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#section3">Section 3</a>
     </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Section 4
-      </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#section41">Link 1</a>
-        <a class="dropdown-item" href="#section42">Link 2</a>
-      </div>
+    <li class="nav-item">
+      <a class="nav-link" href="#follow-us">Follow Us</a>
     </li>
   </ul>
 </nav>
@@ -58,28 +52,23 @@
   </a>
 </div>
 
-<div id="section1" class="container-fluid bg-success" style="padding-top:70px;padding-bottom:70px">
-  <h1>Section 1</h1>
+<div id="home" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
+  <h1>Home</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px">
-  <h1>Section 2</h1>
+<div id="explore" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
+  <h1>Explore</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section3" class="container-fluid bg-secondary" style="padding-top:70px;padding-bottom:70px">
+<div id="section3" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
   <h1>Section 3</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section41" class="container-fluid bg-danger" style="padding-top:70px;padding-bottom:70px">
-  <h1>Section 4 Submenu 1</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="section42" class="container-fluid bg-info" style="padding-top:70px;padding-bottom:70px">
-  <h1>Section 4 Submenu 2</h1>
+<div id="follow-us" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
+  <h1>Follow Us</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
