Scrolling section changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <a class="nav-link" href="#explore">Explore</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#section3">Section 3</a>
+      <a class="nav-link" href="#our-values">Our values</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#follow-us">Follow Us</a>
@@ -62,8 +62,8 @@
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section3" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
-  <h1>Section 3</h1>
+<div id="our-values" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
+  <h1>Our Values</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
