Integrated Arun's changes, added smooth scrolling, added routing, moved js, image files to assets folder and css to styles.css

--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -25,7 +25,8 @@ body {
 }
 
 .menu-link {
-    color: #fff !important;
+    /* color: #fff !important; */
+    color: #3b3b3b !important;
     text-decoration: none !important;
     font-size: 12px;
     font-weight: bold;
