--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm fixed-top justify-content-end">
+<!-- <nav class="navbar navbar-expand-sm fixed-top justify-content-end">
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="#home">Home</a>
@@ -71,6 +71,6 @@
   <h1>Follow Us</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
