--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,34 +1,4 @@
-<div class="">
-  <!-- <header class="header">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-right">
-          <a class="menu-logo" href="#"></a>
-          <a class="menu-link" href="#home"> HOME </a>
-          <a class="menu-link" href="#about-us"> ABOUT US </a>
-          <a class="menu-link" href="#products"> PRODUCTS </a>
-          <a class="menu-link" href="#contact-us"> CONTACT US </a>
-        </div>
-      </div>
-    </div>
-  </header> -->
-
-  <nav class="navbar navbar-expand-sm fixed-top justify-content-end">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link menu-link" href="#carouselExampleIndicators"> HOME </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link menu-link" href="#about-us"> ABOUT US </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link menu-link" href="#products"> PRODUCTS </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link menu-link" href="#contact-us"> CONTACT US </a>
-      </li>
-    </ul>
-  </nav>
+<div class="homepage">
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -81,7 +51,7 @@
 
         </div>
         <div class="col-md-12"> </div>
-        <div class="col-md-4">
+        <div class="col-md-4" routerLink="products/oil">
           <div class="red-square">
             <img src="../assets/images/prod02.png">
             <div class="square-txt">
@@ -91,7 +61,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" routerLink="products/shampoo">
           <div class="green-square">
             <img src="../assets/images/prod01.png">
             <div class="square-txt">
@@ -108,7 +78,6 @@
             </div>
             <img src="../assets/images/prod03.png">
           </div>
-
         </div>
 
         <div class="col-md-4">
@@ -122,12 +91,12 @@
           </div>
         </div>
         <div class="col-md-12 text-center">
-          <a class="view-all" href="#"> View All</a>
+          <a class="view-all"> View All</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="section4" id="contact-us">
+  <div class="section4" id="follow-us">
     <div class="container">
       <div class="row follow-us">
         <div class="col-md-6">
@@ -141,13 +110,19 @@
         <div class="row follow-us">
           <div class="col-md-3">
             <div class="follow-card">
-              <img class="follow-img" src="../assets/images/block01.png">
+              <img class="follow-img"
+                src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;
+                  _nc_cat=102&amp;oh=a9544c5cafbbba44029cca0232010665&amp;oe=5E7A28CA">
               <p class="follow-txt">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco .
+                <a href="https://www.facebook.com/pg/SesaHairCare/posts/?ref=page_internal" target="_blank">
+                  When it comes to providing quality hair care, we trust the ancient wisdom of Ayurveda to tackle all kinds of hair problems.
+                  To know more click the link in bio.
+                </a>
               </p>
               <div class="follow-tags">
-                <span> sesacare </span>
+                <a href="https://www.facebook.com/pg/SesaHairCare/posts/?ref=page_internal" target="_blank">
+                  sesacare
+                </a>
               </div>
               <div class="follow-link">
                 <span class="">
@@ -158,30 +133,42 @@
           </div>
           <div class="col-md-3">
             <div class="follow-card">
-              <img class="follow-img" src="../assets/images/block02.png">
+              <img class="follow-img"
+                src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;
+                  _nc_cat=102&amp;oh=a9544c5cafbbba44029cca0232010665&amp;oe=5E7A28CA">
               <p class="follow-txt">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco .
+                <a href="https://twitter.com/CareSesa" target="_blank">
+                  We are excited to announce that we are now on Twitter.
+                  <br/>
+                  <br/>
+                  #SesaCare #AyurvedicOil #AyurvedicMedicinalShampoo
+                </a>
               </p>
               <div class="follow-tags">
-                <span> sesacare </span>
+                <a href="https://twitter.com/CareSesa" target="_blank">
+                  sesacare
+                </a>
               </div>
               <div class="follow-link">
                 <span class="">
-                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-twitter"></i>
                 </span>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3" attr.href="https://www.instagram.com/p/B5uhhhgABQP/?utm_source=ig_embed&amp;utm_campaign=loading"
+            target="_blank">
             <div class="follow-card">
-              <img class="follow-img" src="../assets/images/block03.png">
-              <p class="follow-txt">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-
-              </p>
+              <img class="follow-img" src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;_nc_cat=102&amp;oh=a9544c5cafbbba44029cca0232010665&amp;oe=5E7A28CA">
+              <div class="follow-txt">
+                <a href="https://www.instagram.com/p/B5uhhhgABQP/?utm_source=ig_embed&amp;utm_campaign=loading" target="_blank">
+                  When it comes to providing quality hair care, we trust the ancient wisdom of Ayurveda to tackle all kinds of hair problems.
+                  To know more click the link in bio.
+                </a>
+              </div>
               <div class="follow-tags">
-                <span> sesacare </span>
+                <a href="https://www.instagram.com/p/B5uhhhgABQP/?utm_source=ig_embed&amp;utm_campaign=loading"
+                  target="_blank"> sesacare </a>
               </div>
               <div class="follow-link">
                 <span class="">
@@ -192,46 +179,27 @@
           </div>
           <div class="col-md-3">
             <div class="follow-card">
-              <img class="follow-img" src="../assets/images/block01.png">
+              <img class="follow-img"
+                src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;
+                  _nc_cat=102&amp;oh=a9544c5cafbbba44029cca0232010665&amp;oe=5E7A28CA">
               <p class="follow-txt">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco .
+                When it comes to providing quality hair care, we trust the ancient wisdom of Ayurveda to tackle all kinds of hair problems.
+                To know more click the link in bio.
               </p>
               <div class="follow-tags">
-                <span> sesacare </span>
+                <a href="https://www.youtube.com/user/Sesacare" target="_blank">
+                  sesacare
+                </a>
               </div>
               <div class="follow-link">
                 <span class="">
-                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-youtube"></i>
                 </span>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="footer">
-    <div class="text-center" style="padding-top: 55px;">
-      <a class="footer-link" href="#">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a class="footer-link" href="#">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a class="footer-link" href="#">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a class="footer-link" href="#">
-        <i class="fab fa-youtube"></i>
-      </a>
-    </div>
-    <div class="footer-extra">
-      <div class="text-center my-4">
-        <a class="" href="#"> Cookie Policy </a> |
-        <a class="" href="#"> Privacy Statement </a>
-      </div>
-      <div> © Copyright 2019 - SESA</div>
     </div>
   </div>
 </div>
