--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,76 +1,98 @@
-<!-- <nav class="navbar navbar-expand-sm fixed-top justify-content-end">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#home">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#explore">Explore</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#our-values">Our values</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#follow-us">Follow Us</a>
-    </li>
-  </ul>
+<!-- <nav class="navbar navbar-expand-sm fixed-top justify-content-end opaque-navbar">
+
+  <a class="menu-logo d-block d-sm-none text-center" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="nav navbar-nav navbar-right">
+      <li class="nav-item">
+        <a class="menu-logo" routerLinkActive="active" href="#"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link menu-link" routerLink='' href="#carouselExampleIndicators"> HOME </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link menu-link" routerLink='about-us' href="#about-us"> ABOUT US </a>
+      </li>
+      <li class="nav-item">
+        <div class="dropdown">
+          <a class="nav-link menu-link" routerLink='products' href="#products"> PRODUCTS </a>
+          <div class="dropdown-content">
+            <a routerLink="products/oil">Oil</a>
+            <a routerLink="products/shampoo">Shampoo</a>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link menu-link" routerLink="contact-us"> CONTACT US </a>
+      </li>
+    </ul>
+  </div>
+</nav> -->
+
+<nav class="navbar navbar-expand-sm fixed-top justify-content-end opaque-navbar">
+  <a class="navbar-brand" href="javascript:void(0)">
+
+  </a>
+  <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="false">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="navbar-collapse collapse" id="navb" style="">
+    <ul class="navbar-nav mr-auto">
+
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item">
+          <a class="nav-link menu-link" routerLink='' href="#carouselExampleIndicators"> HOME </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link menu-link" routerLink='about-us' href="#about-us"> ABOUT US </a>
+        </li>
+        <li class="nav-item">
+          <div class="dropdown">
+            <a class="nav-link menu-link"> PRODUCTS </a>
+            <div class="dropdown-content">
+              <a routerLink="products/oil">Oil</a>
+              <a routerLink="products/shampoo">Shampoo</a>
+            </div>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link menu-link" routerLink="contact-us"> CONTACT US </a>
+        </li>
+      </ul>
+    </form>
+  </div>
 </nav>
 
-<div id="demo" class="carousel slide" data-ride="carousel">
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-  </ul>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://www.w3schools.com/bootstrap4/la.jpg" alt="Los Angeles" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>We had such a great time in LA!</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://www.w3schools.com/bootstrap4/la.jpg" alt="Chicago" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago!</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="https://www.w3schools.com/bootstrap4/la.jpg" alt="New York" width="1100" height="500">
-      <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
-      </div>
-    </div>
+<div class="inside-page">
+  <router-outlet></router-outlet>
+</div>
+
+<div class="footer">
+  <div class="text-center" style="padding-top: 55px;">
+    <a class="footer-link" href="https://www.facebook.com/SesaHairCare/" target="_blank">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a class="footer-link" href="https://twitter.com/CareSesa" target="_blank">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a class="footer-link" href="https://instagram.com/sesacare?igshid=unmosr0ge9ux" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a class="footer-link" href="https://www.youtube.com/user/Sesacare" target="_blank">
+      <i class="fab fa-youtube"></i>
+    </a>
   </div>
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
+  <div class="footer-extra">
+    <!-- <div class="text-center my-4">
+      <a class="" href="#"> Cookie Policy </a> |
+      <a class="" href="#"> Privacy Statement </a>
+    </div> -->
+    <div> © Copyright 2019 - SESA</div>
+  </div>
 </div>
-
-<div id="home" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
-  <h1>Home</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="explore" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
-  <h1>Explore</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="our-values" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
-  <h1>Our Values</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="follow-us" class="container-fluid" style="padding-top:180px;padding-bottom:180px">
-  <h1>Follow Us</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div> -->
-
-<router-outlet></router-outlet>
