Image rewriting issue

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -20,7 +20,7 @@
         <p class="home-txt">
           Contact No.: 9998968777
         </p>
-        <img class="follow-img" src="../assets/images/contactUs-Sesa.png">
+        <img class="follow-img" src="assets/images/contactUs-Sesa.png">
       </div>
 
       <div class="offset-md-1 col-md-5">
