--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div class="section-about-us" id="about-us">
   <div class="banner">
-    <img src="../assets/images/about-us-banner.png">
+    <img src="assets/images/about-us-banner.png">
   </div>
 
   <div class="container mt-4">
@@ -16,23 +16,23 @@
               understanding the consumers’ requirements.
             </p>
             <div class="text-center">
-              <img src="../assets/images/about-us-icon.png" style="width: 60%; height: 200px;">
+              <img src="assets/images/about-us-icon.png" style="width: 60%; height: 200px;">
             </div>
           </div>
           <div class="col-md-4">
-            <img src="../assets/images/about-us-lady.png" style="width: 90%; height: 480px;">
+            <img src="assets/images/about-us-lady.png" style="width: 90%; height: 480px;">
           </div>
         </div>
         <!-- <div class="row">
           <div class="col-md-12">
-            <img src="../assets/images/about-us-icon.png" style="width: 90%; height: 312px;">
+            <img src="assets/images/about-us-icon.png" style="width: 90%; height: 312px;">
           </div>
         </div> -->
       </div>
       <div class="col-md-5">
         <div class="row">
           <div class="col-md-12">
-            <img src="../assets/images/about-us-products.png" style="width: 70%; height: 200px;">
+            <img src="assets/images/about-us-products.png" style="width: 70%; height: 200px;">
           </div>
         </div>
         <div class="row">
