--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,10 +7,10 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="../assets/images/slider01.png" alt="First slide">
+        <img class="d-block w-100" src="assets/images/slider01.png" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../assets/images/slider01.png" alt="Second slide">
+        <img class="d-block w-100" src="assets/images/slider01.png" alt="Second slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -53,7 +53,7 @@
         <div class="col-md-12"> </div>
         <div class="col-md-4" routerLink="products/oil">
           <div class="red-square">
-            <img src="../assets/images/prod02.png">
+            <img src="assets/images/prod02.png">
             <div class="square-txt">
               Sesa Ayurvedic Hair Oil
             </div>
@@ -63,7 +63,7 @@
 
         <div class="col-md-4" routerLink="products/shampoo">
           <div class="green-square">
-            <img src="../assets/images/prod01.png">
+            <img src="assets/images/prod01.png">
             <div class="square-txt">
               Sesa Ayurvedic Shampoo
             </div>
@@ -76,18 +76,18 @@
             <div class="square-greater">
               >
             </div>
-            <img src="../assets/images/prod03.png">
+            <img src="assets/images/prod03.png">
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="yellow-square">
-            <img class="yellow-img-up" src="../assets/images/prod04.png">
+            <img class="yellow-img-up" src="assets/images/prod04.png">
             <div class="square-txt" style="margin-top: 30px;">
               Sesa+ Ayurvedic Strong Roots
             </div>
             <div class="square-greater"> > </div>
-            <img class="yellow-img-down" src="../assets/images/prod05.png">
+            <img class="yellow-img-down" src="assets/images/prod05.png">
           </div>
         </div>
         <div class="col-md-12 text-center">
