--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -25,7 +25,7 @@
   <div class="section2" id="about-us">
     <div class="container">
       <div class="row about">
-        <div class="col-md-6">
+        <div class="col-md-6 mt-5">
           <h2 class="home-header"> Baalon Ka Doctor</h2>
           <p class="home-txt">
             Dull, dry and damaged. It’s time to change the way you look at your hair. Repair and restore the
@@ -33,7 +33,7 @@
             you need in your life.
           </p>
           <div class="">
-            <a class="home-link" href="#"> Learn More <span> > </span></a>
+            <a class="home-link" routerLink="about-us"> Learn More <span> > </span></a>
           </div>
 
         </div>
@@ -48,10 +48,9 @@
           <p class="home-txt">
             For hair care that is just right
           </p>
-
         </div>
         <div class="col-md-12"> </div>
-        <div class="col-md-4" routerLink="products/oil">
+        <div class="col-md-4 mobile-margin-remove" routerLink="products/oil">
           <div class="red-square">
             <img src="assets/images/prod02.png">
             <div class="square-txt">
@@ -90,9 +89,9 @@
             <img class="yellow-img-down" src="assets/images/prod05.png">
           </div>
         </div>
-        <div class="col-md-12 text-center">
+        <!-- <div class="col-md-12 text-center">
           <a class="view-all"> View All</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
