--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -19,26 +19,21 @@
               <img src="assets/images/about-us-icon.png" style="width: 60%; height: 200px;">
             </div>
           </div>
-          <div class="col-md-4">
-            <img src="assets/images/about-us-lady.png" style="width: 90%; height: 480px;">
+          <div class="col-md-4 mobile-margin-top-lady">
+            <img src="assets/images/about-us-lady.png" class="lady-image">
           </div>
         </div>
-        <!-- <div class="row">
-          <div class="col-md-12">
-            <img src="assets/images/about-us-icon.png" style="width: 90%; height: 312px;">
-          </div>
-        </div> -->
       </div>
       <div class="col-md-5">
         <div class="row">
           <div class="col-md-12">
-            <img src="assets/images/about-us-products.png" style="width: 70%; height: 200px;">
+            <img src="assets/images/about-us-products.png" class="about-us-products">
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
             <h2 class="home-header"> About products</h2>
-            <p class="home-txt">
+            <p class="home-txt text-justify">
               Our compelling product offering includes Sesa Ayurvedic Hair oil, Sesa Ayurvedic Shampoo, Sesa Ayurvedic+ Hair Spa Kit, and Sesa+
               Ayurvedic Strong Roots. We relentlessly aim to provide top-notch quality to the consumer and that is what has helped us become one of
               India’s best selling hair care brands.
@@ -48,4 +43,5 @@
       </div>
     </div>
   </div>
+
 </div>
