--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,12 +1,12 @@
-<div>
+<!-- <div>
   <div class="map-responsive">
     <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
       width="600" height="200" frameborder="0" style="border:0" allowfullscreen>
     </iframe>
   </div>
-</div>
+</div> -->
 
-<div id="about-us">
+<div id="contact-us" class="mt-5">
   <div class="container">
     <div class="row about">
       <div class="col-md-6">
