--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -7,16 +7,17 @@
     <div class="row">
       <div class="col-md-7">
         <div class="row">
-          <div class="col-md-8">
-            <h2 class="home-header"> About the brand</h2>
+          <div class="col-md-8" style="position: relative;">
+            <h2 class="home-header abt-margin mobile-hide"> About the brand</h2>
+            <h2 class="home-header abt-margin mobile-show" style="margin-top:165px;"> About the brand</h2>
             <p class="home-txt">
               Sesa Care is a leading Indian manufacturer and exporter of Ayurvedic Hair Care products.
               We combine the ancient knowledge of 5000 year old Ayurveda with modern best-in-class manufacturing practices to deliver high quality
               Ayurvedic Hair Care products. We have been inthe market since 1996, gathering more than 20 years of expertise in
               understanding the consumers’ requirements.
             </p>
-            <div class="text-center">
-              <img src="assets/images/about-us-icon.png" style="width: 60%; height: 200px;">
+            <div class="abt-us-ico">
+              <img src="assets/images/about-us-icon.png" >
             </div>
           </div>
           <div class="col-md-4 mobile-margin-top-lady">
@@ -25,12 +26,12 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div class="row">
+        <div class="row prod-down">
           <div class="col-md-12">
             <img src="assets/images/about-us-products.png" class="about-us-products">
           </div>
         </div>
-        <div class="row">
+        <div class="row prod-up">
           <div class="col-md-12">
             <h2 class="home-header"> About products</h2>
             <p class="home-txt text-justify">
