--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,13 +26,12 @@
   </nav>
 </div>
 
-<nav class="navbar navbar-expand-sm fixed-top justify-content-end navbar-dark bg-dark d-xs-block d-sm-block d-md-none d-lg-none">
-  <a class="navbar-brand" href="javascript:void(0)">
+<nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark d-xs-block d-sm-block d-md-none d-lg-none">
+    <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="false">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  <a class="navbar-brand" href="javascript:void(0)"> </a>
 
-  </a>
-  <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="false">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
   <div class="navbar-collapse collapse" id="navb" style="">
     <ul class="navbar-nav mr-auto">
