--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -26,7 +26,8 @@
     <div class="container">
       <div class="row about">
         <div class="col-md-6 mt-5">
-          <h2 class="home-header"> Baalon Ka Doctor</h2>
+          <h2 class="home-header mobile-hide"> Baalon Ka Doctor</h2>
+          <h2 class="home-header mobile-show"> Baalon Ka <br> Doctor</h2>
           <p class="home-txt">
             Dull, dry and damaged. It’s time to change the way you look at your hair. Repair and restore the
             shine your hair truly deserves with a range of our Ayurvedic products. Just the #BaalonKaDoctor
@@ -81,7 +82,7 @@
 
         <div class="col-md-4">
           <div class="yellow-square">
-            <img class="yellow-img-up" src="assets/images/prod04.png">
+            <img class="yellow-img-up mobile-hide" src="assets/images/prod04.png">
             <div class="square-txt" style="margin-top: 30px;">
               Sesa+ Ayurvedic Strong Roots
             </div>
