--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,6 +1,7 @@
 <div class="section-about-us" id="about-us">
   <div class="banner">
-    <img src="assets/images/about-us-banner.png">
+    <img class="mobile-hide" src="assets/images/about-us-banner.png">
+    <img class="mobile-show" src="assets/images/about-us-banner-mob.png">
   </div>
 
   <div class="container mt-4">
