--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,7 @@
 <div class="section-products" id="products">
   <div class="banner">
-    <img [src]="productImage.poster">
+    <img class="mobile-hide" [src]="productImage.poster">
+    <img class="mobile-show" [src]="productImage.posterMob">
   </div>
   <div class="container mt-4">
     <div class="row">
@@ -11,7 +12,7 @@
         </p>
       </div>
       <div class="col-md-5">
-        <img [src]="productImage.productInfo" style="width: 90%; height: 312px;">
+        <img class="prod-oil-img" [src]="productImage.productInfo" >
       </div>
     </div>
   </div>
