--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,10 +7,12 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="assets/images/slider01.png" alt="First slide">
+        <img class="d-block w-100 mobile-hide" src="assets/images/slider01.png" alt="First slide">
+        <img class="d-block w-100 mobile-show" src="assets/images/slider01-mob.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/slider01.png" alt="Second slide">
+        <img class="d-block w-100 mobile-hide" src="assets/images/slider01.png" alt="Second slide">
+        <img class="d-block w-100 mobile-show" src="assets/images/slider01-mob.jpg" alt="Second slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -51,7 +53,7 @@
           </p>
         </div>
         <div class="col-md-12"> </div>
-        <div class="col-md-4 mobile-margin-remove" routerLink="products/oil">
+        <div class="offset-md-2 col-md-4 mobile-margin-remove" routerLink="products/oil">
           <div class="red-square">
             <img src="assets/images/prod02.png">
             <div class="square-txt">
@@ -69,7 +71,7 @@
             </div>
             <div class="square-greater"> > </div>
           </div>
-          <div class="brown-square">
+          <!-- <div class="brown-square">
             <div class="square-txt sq-pad-top">
               Sesa Ayurvedic+ Hair Spa
             </div>
@@ -77,10 +79,10 @@
               >
             </div>
             <img src="assets/images/prod03.png">
-          </div>
+          </div> -->
         </div>
 
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="yellow-square">
             <img class="yellow-img-up mobile-hide" src="assets/images/prod04.png">
             <div class="square-txt" style="margin-top: 30px;">
@@ -89,7 +91,12 @@
             <div class="square-greater"> > </div>
             <img class="yellow-img-down" src="assets/images/prod05.png">
           </div>
-        </div>
+        </div> -->
+
+
+
+
+
         <!-- <div class="col-md-12 text-center">
           <a class="view-all"> View All</a>
         </div> -->
