--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -12,11 +12,15 @@
             <h2 class="home-header abt-margin mobile-hide"> About the brand</h2>
             <h2 class="home-header abt-margin mobile-show" style="margin-top:165px;"> About the brand</h2>
             <p class="home-txt">
-              Sesa Care is a leading Indian manufacturer and exporter of Ayurvedic Hair Care products.
-              We combine the ancient knowledge of 5000 year old Ayurveda with modern best-in-class manufacturing practices to deliver high quality
-              Ayurvedic Hair Care products. We have been inthe market since 1996, gathering more than 20 years of expertise in
-              understanding the consumers’ requirements.
+              Sesa Care is a leading Indian manufacturer and exporter of Ayurvedic Hair Care products. 
+              Sesa combines the ancient knowledge of 5000-year-old Ayurveda with modern best-in-class 
+              manufacturing practices to deliver high quality Ayurvedic Hair Care products. Sesa have been 
+              in the market since 1996, gathering more than 20 years of expertise in understanding the 
+              consumers’ requirements.
             </p>
+            <div class="">
+              <a class="home-link" href="http://www.sesacare.com/"> Corporate Website  <span> > </span></a>
+            </div>
             <div class="abt-us-ico">
               <img src="assets/images/about-us-icon.png" >
             </div>
@@ -36,9 +40,11 @@
           <div class="col-md-12">
             <h2 class="home-header"> About products</h2>
             <p class="home-txt text-justify">
-              Our compelling product offering includes Sesa Ayurvedic Hair oil, Sesa Ayurvedic Shampoo, Sesa Ayurvedic+ Hair Spa Kit, and Sesa+
-              Ayurvedic Strong Roots. We relentlessly aim to provide top-notch quality to the consumer and that is what has helped us become one of
-              India’s best selling hair care brands.
+              Our compelling product offering includes Sesa Ayurvedic Hair Oil and Sesa Ayurvedic Shampoo. 
+              Sesa Ayurvedic Hair Oil is a 100% ayurvedic hair oil created to provide you with healthier 
+              and shinier hair. Sesa Ayurvedic Shampoo is created using 17 herbal botanicals which helps in 
+              reducing hair fall in 15 days. We relentlessly aim to provide top-notch quality to the consumer 
+              and that is what has helped us become one of India’s best-selling hair care brands.
             </p>
           </div>
         </div>
