--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
         <div class="dropdown">
           <a class="nav-link menu-link"> PRODUCTS </a>
           <div class="dropdown-content">
-            <a routerLink="products/oil">Oil</a>
-            <a routerLink="products/shampoo">Shampoo</a>
+            <a routerLink="products/oil">Ayurvedic Oil</a>
+            <a routerLink="products/shampoo">Ayurvedic Shampoo</a>
           </div>
         </div>
       </li>
@@ -49,8 +49,8 @@
           <div class="dropdown">
             <a class="nav-link menu-link"> PRODUCTS </a>
             <div class="dropdown-content">
-              <a routerLink="products/oil">Oil</a>
-              <a routerLink="products/shampoo">Shampoo</a>
+              <a routerLink="products/oil">Ayurvedic Oil</a>
+              <a routerLink="products/shampoo">Ayurvedic Shampoo</a>
             </div>
           </div>
         </li>
