--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,12 +7,12 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100 mobile-hide" src="assets/images/slider01.png" alt="First slide">
+        <img class="d-block w-100 mobile-hide" src="assets/images/slider01.jpg" alt="First slide">
         <img class="d-block w-100 mobile-show" src="assets/images/slider01-mob.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100 mobile-hide" src="assets/images/slider01.png" alt="Second slide">
-        <img class="d-block w-100 mobile-show" src="assets/images/slider01-mob.jpg" alt="Second slide">
+        <img class="d-block w-100 mobile-hide" src="assets/images/slider02.jpg" alt="Second slide">
+        <img class="d-block w-100 mobile-show" src="assets/images/slider02-mob.jpg" alt="Second slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -29,14 +29,14 @@
       <div class="row about">
         <div class="col-md-6 mt-5">
           <h2 class="home-header mobile-hide"> Baalon Ka Doctor</h2>
-          <h2 class="home-header mobile-show"> Baalon Ka <br> Doctor</h2>
+          <h2 class="home-header mobile-show"> Baalon <br> Ka <br> Doctor</h2>
           <p class="home-txt">
             Dull, dry and damaged. It’s time to change the way you look at your hair. Repair and restore the
             shine your hair truly deserves with a range of our Ayurvedic products. Just the #BaalonKaDoctor
             you need in your life.
           </p>
           <div class="">
-            <a class="home-link" routerLink="about-us"> Learn More <span> > </span></a>
+            <a class="home-link" routerLink="products/oil"> Learn More <span> > </span></a>
           </div>
 
         </div>
@@ -46,10 +46,12 @@
   <div class="section3" id="products">
     <div class="container">
       <div class="row product">
-        <div class="col-md-7">
+        <div class="col-md-12">
           <h2 class="home-header"> Explore Our Products </h2>
           <p class="home-txt">
-            For hair care that is just right
+            A range of products created with the knowledge of ancient ayurveda to make your hair smooth, 
+            shiny, and strong. If you are looking to repair your damaged hair or just looking to maintain 
+            the health and luster of your hair, then Sesa is the perfect choice for you.
           </p>
         </div>
         <div class="col-md-12"> </div>
@@ -115,7 +117,7 @@
       </div>
       <div class="container">
         <div class="row follow-us">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="follow-card">
               <img class="follow-img"
                 src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;
@@ -138,7 +140,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <div class="follow-card">
               <img class="follow-img"
                 src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;
@@ -162,8 +164,8 @@
                 </span>
               </div>
             </div>
-          </div>
-          <div class="col-md-3" attr.href="https://www.instagram.com/p/B5uhhhgABQP/?utm_source=ig_embed&amp;utm_campaign=loading"
+          </div> -->
+          <div class="col-md-4" attr.href="https://www.instagram.com/p/B5uhhhgABQP/?utm_source=ig_embed&amp;utm_campaign=loading"
             target="_blank">
             <div class="follow-card">
               <img class="follow-img" src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;_nc_cat=102&amp;oh=a9544c5cafbbba44029cca0232010665&amp;oe=5E7A28CA">
@@ -184,7 +186,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="follow-card">
               <img class="follow-img"
                 src="https://instagram.fbom2-1.fna.fbcdn.net/v/t51.2885-15/e35/77377552_517281182193134_2568926214324026896_n.jpg?_nc_ht=instagram.fbom2-1.fna.fbcdn.net&amp;
